--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -17,6 +17,9 @@
     {% if site.show_menu == 1 %}
         {% if site.pages %}
         <div class="mainmenu">
+            {% if p.layout == 'about' %}
+                <a href="{{ p.url | prepend: site.baseurl | prepend: site.url }}" {% if p.url == page.url %}class="active"{% endif %}>{{ p.title }}</a>
+            {% endif %}
             {% for p in site.pages %}
                 {% if p.layout == 'page' %}
                     <a href="{{ p.url | prepend: site.baseurl | prepend: site.url }}" {% if p.url == page.url %}class="active"{% endif %}>{{ p.title }}</a>
