Add Comments to Reading

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -11,3 +11,23 @@ layout: default
         {{ content }}
     </div>
 </article>
+
+{% if page.comments and site.show_comments == 1 and page.title == "What I'm Reading" %}
+<aside class="comments" role="complementary">
+    <div id="disqus_thread"></div>
+    <script>
+        var disqus_config = function () {
+            this.page.url = '{{ page.url | prepend: site.baseurl | prepend: site.url }}';
+            this.page.identifier = '{{ page.date | date: "%-m/%-d/%Y" }}';
+        };
+        (function() {
+            var d = document, s = d.createElement('script');
+
+            s.src = '//{{site.disqus}}.disqus.com/embed.js';
+
+            s.setAttribute('data-timestamp', +new Date());
+            (d.head || d.body).appendChild(s);
+        })();
+    </script>
+</aside>
+{% endif %}
