--- a/assets/partials/_vars.scss
+++ b/assets/partials/_vars.scss
@@ -9,7 +9,7 @@ $grey-color-light: 		#aaa;
 $grey-color-lighter: 	#ddd;
 $grey-color-lightest: 	#eee;
 
-$primary-color:			#1abc9c;
+$primary-color:			#58747E;
 
 $facebook-brand-color:	#3b5998;
 $twitter-brand-color:	#55acee;
